Update installed Alpine packages
- Replace p7zip with 7zip
- Install 7zip and mercurial on all architectures

--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -2,18 +2,18 @@ FROM php:8-alpine AS binary-with-runtime
 
 RUN set -eux ; \
   apk add --no-cache --virtual .composer-rundeps \
+    7zip \
     bash \
     coreutils \
     git \
     make \
+    mercurial \
     openssh-client \
     patch \
     subversion \
     tini \
     unzip \
-    zip \
-    $([ "$(apk --print-arch)" != "x86" ] && echo mercurial) \
-    $([ "$(apk --print-arch)" != "armhf" ] && echo p7zip)
+    zip
 
 RUN printf "# composer php cli ini settings\n\
 date.timezone=UTC\n\
