--- a/.github/actions/determine-composer-version/action.yaml
+++ b/.github/actions/determine-composer-version/action.yaml
@@ -18,8 +18,8 @@ runs:
   steps:
     - name: "Determine composer version from Dockerfile"
       run: |
-        echo "COMPOSER_VERSION_MAJOR=$(grep -oP 'COMPOSER_VERSION \K\d+\.\d+\.\d+' Dockerfile | cut -d '.' -f 1)" >> $GITHUB_ENV
-        echo "COMPOSER_VERSION_MAJOR_MINOR=$(grep -oP 'COMPOSER_VERSION \K\d+\.\d+\.\d+' Dockerfile | cut -d '.' -f 1,2)" >> $GITHUB_ENV
-        echo "COMPOSER_VERSION_MAJOR_MINOR_PATCH=$(grep -oP 'COMPOSER_VERSION \K\d+\.\d+\.\d+' Dockerfile)" >> $GITHUB_ENV
+        echo "COMPOSER_VERSION_MAJOR=$(grep -oP 'ENV COMPOSER_VERSION=\K\d+\.\d+\.\d+' Dockerfile | cut -d '.' -f 1)" >> $GITHUB_ENV
+        echo "COMPOSER_VERSION_MAJOR_MINOR=$(grep -oP 'ENV COMPOSER_VERSION=\K\d+\.\d+\.\d+' Dockerfile | cut -d '.' -f 1,2)" >> $GITHUB_ENV
+        echo "COMPOSER_VERSION_MAJOR_MINOR_PATCH=$(grep -oP 'ENV COMPOSER_VERSION=\K\d+\.\d+\.\d+' Dockerfile)" >> $GITHUB_ENV
       shell: "bash"
       working-directory: "${{ inputs.working-directory }}"
