--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,7 @@
     "extends": [
         "config:recommended"
     ],
+    "separateMinorPatch": true,
     "packageRules": [
         {
             "matchPackageNames": [
