Disable Renovate dashboard approval for all packages

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,6 +10,12 @@
     "separateMinorPatch": true,
     "packageRules": [
         {
+          "matchPackageNames": [
+            "*"
+          ],
+          "dependencyDashboardApproval": false
+        },
+        {
             "matchPackageNames": [
                 "composer/composer"
             ],
